🐛 Fix : z-index 수정

--- a/src/components/common/header/Header.module.css
+++ b/src/components/common/header/Header.module.css
@@ -2,7 +2,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 500;
+  z-index: 2000;
 
   width: 100%;
   height: 72px;
